# allbridge-core-soroban-contracts

./: .gitignore  Cargo.toml  Makefile
common/bridge_storage/: Cargo.toml
common/bridge_storage/src/: admin.rs  gas_oracle_address.rs  gas_usage.rs  lib.rs  native_token.rs  stop_authority.rs  view.rs
common/proc_macros/src/: lib.rs
common/shared/src/: consts.rs  error.rs  event.rs  lib.rs  soroban_data.rs
contracts/auto-deposit-factory/: Cargo.toml
contracts/auto-deposit-factory/src/: contract.rs  lib.rs
contracts/auto-deposit-factory/src/events/: mod.rs
contracts/auto-deposit-factory/src/methods/: mod.rs  view.rs
contracts/auto-deposit-factory/src/methods/admin/: mod.rs  register_token.rs  set_send_tx_cost.rs  set_wallet_wasm_hash.rs  unregister_token.rs  withdraw.rs  withdraw_gas_tokens.rs
contracts/auto-deposit-factory/src/methods/internal/: convert_fee_in_tokens_to_native_token.rs  deploy_deposit_wallet.rs  get_deposit_wallet.rs  mod.rs  send_tx_fee_token_amount.rs  swap_and_bridge.rs
contracts/auto-deposit-factory/src/methods/public/: constructor.rs  create_deposit_wallet.rs  create_swap_and_bridge.rs  deploy_deposit_wallet.rs  mod.rs  swap_and_bridge.rs
contracts/auto-deposit-factory/src/storage/: config.rs  mod.rs
contracts/auto-deposit-wallet/: Cargo.toml
contracts/auto-deposit-wallet/src/: contract.rs  (+1 more)
contracts/bridge/: Cargo.toml
contracts/gas_oracle/: Cargo.toml
contracts/messenger/: Cargo.toml
contracts/pool/: Cargo.toml
mk/: build.mk  commands.mk  utils.mk  vars.mk
mk/contracts/: auto-deposit.mk  bridge.mk  gas-oracle.mk  messenger.mk  pool.mk
tests/: Cargo.toml
tests/src/: auto_deposit_factory.rs  auto_deposit_factory_admin.rs  auto_deposit_wallet.rs  bridge.rs  bridge_admin.rs  contracts.rs  gas_oracle.rs  lib.rs  messenger.rs  messenger_admin.rs  pool.rs  pool_admin.rs  reward_manager.rs
tests/src/utils/: balances_snapshot.rs  bridge_env.rs  bridge_env_config.rs  common.rs  consts.rs  errors.rs  mod.rs  sign_message.rs
tests/src/utils/contracts_wrappers/: bridge.rs  gas_oracle.rs  messenger.rs  mod.rs  pool.rs  token.rs  user.rs
tests/src/utils/contracts_wrappers/auto_deposit/: factory.rs  mod.rs  wallet.rs
(+116 files in other folders)
