[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
shared = { workspace = true }
ethers-signers = "2.0.9"
ethers-core = "2.0.9"
hex = { workspace = true }
arrayref = { workspace = true }
rand = "0.8.5"
color-print = "0.3.5"
ethnum = { workspace = true }

[lints.clippy]
redundant_clone = "warn"
unreadable_literal = "warn"
semicolon_if_nothing_returned = "warn"
or_fun_call = "warn"
too_many_arguments = "allow"
